  on Windows, because digest() uses the faster serialize() of
  R v2.12.0.  The earlier version was orders of magnitude slower
  on Windows, which we have been patching in the aroma framework
  since v0.9.3.4.  That patch wrote to file, which was slower than
  the recent fix.  This Windows-only patch is no longer needed,
  and hence neither applied, on R v2.12.0 and beyond.


Version: 1.9.1 [2011-01-14]
o Added argument 'flavor' to segmentByGLAD() for RawGenomicSignals,
  which makes it possible to specify whether daglad() or glad() of
  the GLAD package will be used.  The 'flavor' argument can also
  be passed as for instance GladModel(..., flavor="daglad").


Version: 1.9.0 [2011-01-10]
o No updates.  Submitted to CRAN.


Version: 1.8.3 [2010-12-27]
o Added genome annotation file Mouse,chromosomes.txt to
  system.file("annotationData/genomes/Mouse", package="aroma.core").


Version: 1.8.2 [2010-12-07]
o ROBUSTNESS: Whenever the GLAD package is tried to be loaded and it 
  fails due to failure of loading a shared library, then this will be
  remembered for 24 hours while it will not be loaded again.
o Added requireWithMemory().


Version: 1.8.1 [2010-12-02]
o BUG FIX: plot() for CopyNumberSegmentationModel would throw exception
  "Cannot infer number of bases in chromosome. No such chromosome: 25"
  for chromosome 25.
o BUG FIX: drawCytoband2() would throw an error if argument 'cytoband'
  was an empty data frame, which could happen if there is no cytoband
  annotation data for the requested chromosome.  Now it returns quietly.


Version: 1.8.0 [2010-11-07]
o Committed to CRAN.
o CLEANUP: Dropped non-used Javascript toolkit code that was intended
  to be used for a future version of ChromosomeExplorer.


Version: 1.7.6 [2010-11-06]
o ROBUSTNESS: Now subsample() for BinnedScatter utilizes resample().
o CLEANUP: Removed stext().  It is in R.utils.
o CLEANUP: Removed some outdated patches for R v2.7.0 and before.